[gd_scene load_steps=9 format=2]

[ext_resource path="res://PlayerController/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://PlayerController/seed_box.png" type="Texture" id=2]
[ext_resource path="res://TestScene/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://DiggableAreas/dig_particle.tres" type="Material" id=4]
[ext_resource path="res://DiggableAreas/dig_particle.png" type="Texture" id=5]
[ext_resource path="res://PlayerController/DayTimer.gd" type="Script" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.1, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.620755, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.750943, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
resource_name = "minishake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, -1 ), Vector2( 1, 1 ), Vector2( -0.5, -0.5 ), Vector2( 0, 0 ) ]
}

[node name="PlayerController" type="Node2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SeedBox" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 424.673
margin_top = 497.987
margin_right = 623.673
margin_bottom = 580.987
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_right = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DigParticle" type="Particles2D" parent="."]
emitting = false
amount = 12
lifetime = 3.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
randomness = 0.1
process_material = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="DayNightOverlay" type="CanvasLayer" parent="."]
layer = 2

[node name="DayTimer" type="Timer" parent="DayNightOverlay"]
wait_time = 15.0
autostart = true
script = ExtResource( 6 )
day_color = Color( 0, 0, 0, 0 )
night_color = Color( 0.0784314, 0.0235294, 0.172549, 0.588235 )
color_ratio = SubResource( 1 )

[node name="DayOverlay" type="ColorRect" parent="DayNightOverlay/DayTimer"]
margin_right = 1024.0
margin_bottom = 604.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.964706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenShake" type="AnimationPlayer" parent="."]
anims/minishake = SubResource( 2 )

[node name="PauseMenuOverlay" type="CanvasLayer" parent="."]
layer = 4

[node name="PauseMenu" parent="PauseMenuOverlay" instance=ExtResource( 3 )]
[connection signal="timeout" from="DayNightOverlay/DayTimer" to="DayNightOverlay/DayTimer" method="_on_DayTimer_timeout"]
